--- a/app/src/main/res/drawable/styles.xml
+++ b/app/src/main/res/drawable/styles.xml
@@ -1,5 +1,6 @@
+<!-- res/drawable/circle_button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="20dp" /> <!-- Adjust the radius as needed -->
+    android:shape="oval">
 
 </shape>
+
