--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -36,8 +36,15 @@
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 >
-
             </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/MoreImages"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="+more images"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
