--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -16,12 +16,12 @@
     android:layout_height="wrap_content"
     >
     <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="60dp"
+        android:layout_width="70dp"
         android:layout_height="60dp"
         android:id="@+id/recImage"
-        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:padding="8dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:src="@drawable/upload"
         />
     
