--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,5 +12,10 @@
         android:layout_height="50dp"
         android:text="Cities"
         android:id="@+id/citiesButton"/>
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="Trips"
+        android:id="@+id/TripsButton"/>
 </LinearLayout>
 
