--- a/app/src/main/res/layout/activity_selecting_places.xml
+++ b/app/src/main/res/layout/activity_selecting_places.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.TourismPlaces"
+    tools:context=".Activities.SelectingPlacesActivity"
     >
     <androidx.appcompat.widget.SearchView
-        android:id="@+id/PlacesearchView"
+        android:id="@+id/SelectingPlacesearchView"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -18,25 +18,20 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:layout_marginTop="70dp"
+        android:id="@+id/DoneAddingPlaces"
 
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/PlacerecyclerView"
+        android:id="@+id/SlectingPlacesrecyclerView"
         android:scrollbars="vertical"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="90dp"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/Addplace"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/lavender"
-        android:src="@drawable/baseline_add_24"
-        android:tint="@color/white" />
+
 </RelativeLayout>
