--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavender">#8692f7</color>
+    <color name="light_blue">#92b0c8</color>
+    <color name="dark_blue">#5a93c5</color>
+    <color name="grey">#e1e7ec</color>
 
 </resources>
