--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,65 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".DetailsActivity.DetailActivity"
+    android:visibility="visible"
+    android:background="@drawable/rauche_rock"
     >
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/detailTitle"
-    android:text="Title"
-    android:layout_marginTop="14dp"
-    android:textSize="24sp"
-    android:layout_gravity="center"
-    android:layout_marginBottom="12dp"/>
-
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/detailImage"
-        android:padding="8dp"
-        android:layout_gravity="center"
-        android:src="@drawable/upload"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".DetailsActivity.DetailActivity"
+        >
 
-        android:scaleType="fitXY"/>
+        <TextView
+            android:id="@+id/detailTitle"
+            android:layout_width="440dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="Title"
+            android:textSize="24sp" />
 
-    <TextView
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/detailImage"
+            android:padding="8dp"
+            android:layout_gravity="center"
+            android:src="@drawable/upload"
+
+            android:scaleType="fitXY"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:padding="20dp"
+            android:text="Description"
+            android:layout_gravity="center"
+            android:id="@+id/detailDesc"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/showHotelsButton"
+                android:backgroundTint="@color/dark_blue"
+                android:layout_marginLeft="125dp"
+                android:src="@drawable/baseline_hotel_24"
+                android:background="@drawable/back_border"
+
+                ></ImageButton>
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/showHospitalsButton"
+                android:layout_marginLeft="5dp"
+                android:backgroundTint="@color/dark_blue"
+                android:src="@drawable/baseline_local_hospital_24"
+                android:background="@drawable/back_border"
+                ></ImageButton>
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/showRestaurantsButton"
+                android:layout_marginLeft="5dp"
+                android:backgroundTint="@color/dark_blue"
+                android:src="@drawable/baseline_fastfood_24"
+                android:background="@drawable/back_border"
+                ></ImageButton>
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:id="@+id/showTourismPlacesButton"
+            android:text="View Tourism Places"
+            android:backgroundTint="@color/dark_blue"
+            android:layout_gravity="center"
+            ></Button>
+    </LinearLayout>
+
+    <!-- Buttons Layout -->
+    <LinearLayout
+        android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="20dp"
-        android:text="Description"
-        android:layout_gravity="center"
-        android:id="@+id/detailDesc"
-        android:textSize="18sp"
-        android:textColor="@color/lavender"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showHotelsButton"
-        android:text="Nearby Hotels"
-        ></Button>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showHospitalsButton"
-        android:text="Nearby Hospitals"
-        ></Button>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showRestaurantsButton"
-        android:text="Nearby Restaurants"
-        ></Button>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/showTourismPlacesButton"
-        android:text="View Tourism Places"
-        ></Button>
-</LinearLayout>
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+
+        <!-- Home Button -->
+        <ImageButton
+            android:id="@+id/home_button2"
+            android:layout_width="82dp"
+            android:layout_height="60dp"
+            android:background="@drawable/back_border"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_home_24"
+            android:adjustViewBounds="true"
+            android:layout_marginBottom="7dp" />
+
+        <!-- Search Button -->
+        <ImageButton
+            android:id="@+id/TripsButton"
+            android:layout_width="82dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="0.5dp"
+            android:background="@drawable/back_border"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_directions_car_24"
+            android:layout_marginBottom="7dp"/>
+
+        <!-- Favorite Button -->
+        <ImageButton
+            android:id="@+id/citiesButton"
+            android:layout_width="82dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="0.5dp"
+            android:background="@drawable/back_border"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_location_city_24"
+            android:layout_marginBottom="7dp"/>
+
+        <!-- Download Button -->
+        <ImageButton
+            android:id="@+id/favoritesButton"
+            android:layout_width="82dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="0.5dp"
+            android:background="@drawable/back_border"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_favorite_24"
+            android:layout_marginBottom="7dp"/>
+
+        <!-- Profile Button -->
+        <ImageButton
+            android:id="@+id/profile_button"
+            android:layout_width="82dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="0.5dp"
+            android:background="@drawable/back_border"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_person_24"
+            android:layout_marginBottom="7dp"/>
+    </LinearLayout>
+
+
+</RelativeLayout>
