Design Till now

--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -114,7 +114,7 @@
 
                 <TextView
                     android:id="@+id/PlaceName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:text="Place Name"
                     android:textSize="20sp"
@@ -127,8 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/backgroundImageView"
                     android:background="@null"
-                    android:src="@drawable/baseline_favorite_border_24"
-                    android:layout_marginLeft="300dp"/>
+                    android:src="@drawable/baseline_favorite_border_24" />
 
 
             </LinearLayout>
