--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -31,13 +31,10 @@
                     android:padding="5dp"
                     android:orientation="horizontal"
                     >
-                    <ImageView
-                        android:id="@+id/backgroundImageView"
-                        android:layout_width="65dp"
-                        android:layout_height="65dp"
-                        android:scaleType="centerCrop"
-                        android:padding="10dp"
-                        android:src="@drawable/baseline_person_24"/>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/ProfileImage"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -48,7 +45,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:layout_marginLeft="5dp"
+                            android:layout_marginLeft="10dp"
                             android:textAlignment="textStart"
                             android:text="Username"
                             android:textSize="16sp"
