The user is able to add memories when the trip is old

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -83,7 +83,7 @@
 
         <!-- Profile Button -->
         <ImageButton
-            android:id="@+id/ProfileButton"
+            android:id="@+id/profile_button"
             android:layout_width="82dp"
             android:layout_height="60dp"
             android:layout_marginLeft="0.5dp"
