--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.TripActivity"
-    >
+    android:background="@drawable/rauche_rock"
+    tools:context=".Activities.TripActivity">
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/SearchTrip"
         android:layout_width="350dp"
@@ -16,52 +16,71 @@
         app:iconifiedByDefault="false"
         app:queryHint="Search Trips.."
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        />
-    <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"/>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="70dp">
+        android:scrollbars="none"
+        android:id="@+id/CategoryScroll"
+        android:layout_marginTop="30dp">
 
-        <TextView
-            android:id="@+id/MyTrips"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="My Trips"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/JoinedTrips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="Joined Trips"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/RequestedTrips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="Requested Trips"
-            android:clickable="true"  android:onClick="onCategoryClick" />
+            android:orientation="horizontal"
+            android:layout_marginTop="70dp">
 
-        <TextView
-            android:id="@+id/AllTrips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="All Trips"
-            android:clickable="true"  android:onClick="onCategoryClick" />
+            <TextView
+                android:id="@+id/MyTrips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="My Trips"
+                android:clickable="true"
+                android:onClick="onCategoryClick"/>
+            <TextView
+                android:id="@+id/JoinedTrips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="Joined Trips"
+                android:clickable="true"
+                android:onClick="onCategoryClick"/>
+            <TextView
+                android:id="@+id/RequestedTrips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="Requested Trips"
+                android:clickable="true"
+                android:onClick="onCategoryClick"/>
+            <TextView
+                android:id="@+id/AllTrips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="All Trips"
+                android:clickable="true"
+                android:onClick="onCategoryClick"/>
+            <TextView
+                android:id="@+id/OldTrips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="Old Trips"
+                android:clickable="true"
+                android:onClick="onCategoryClick"/>
+        </LinearLayout>
+    </HorizontalScrollView>
 
-
-    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/TriprecyclerView"
-        android:scrollbars="vertical"
-        android:layout_marginTop="90dp"/>
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/CategoryScroll"
+        android:layout_marginTop="16dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/AddTrip"
@@ -71,9 +90,21 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/lavender"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="90dp"
+        android:backgroundTint="@color/dark_blue"
         android:src="@drawable/baseline_add_24"
-        android:tint="@color/white" />
+        android:tint="@color/white"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        app:itemIconTint="#5A93C5"
+        app:itemBackground="@drawable/icon_border"
+        app:itemIconSize="35dp"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_nav_menu"/>
 </RelativeLayout>
