--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -1,122 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:orientation="vertical"
     tools:context=".DetailsActivity.TripDetails">
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        android:id="@+id/CategoryScroll"
-        android:layout_marginTop="30dp">
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/Places"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Places"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/Requirements"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Requirements"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/Members"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Members"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/Requests"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Requests"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-        <TextView
-            android:id="@+id/MyRequirements"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="My Requirements"
-            android:clickable="true"  android:onClick="onCategoryClick" />
-
-    </LinearLayout>
-    </HorizontalScrollView>
-
-    <FrameLayout  android:id="@+id/data_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/Addplace"
-            android:layout_width="wrap_content"
+        <!-- Your existing HorizontalScrollView with categories -->
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Places to Trip"
-            android:layout_marginTop="10dp"/>
+            android:scrollbars="none"
+            android:id="@+id/CategoryScroll"
+            android:layout_marginTop="30dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/PlacerecyclerView"
-            android:scrollbars="vertical"
-            android:layout_marginTop="35dp"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="35dp"
-            android:visibility="gone"
-            android:id="@+id/RequirementsRecyclerView"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="35dp"
-            android:visibility="gone"
-            android:id="@+id/RequestsRecyclerView"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="35dp"
-            android:visibility="gone"
-            android:id="@+id/MembersRecyclerView"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="35dp"
-            android:visibility="gone"
-            android:id="@+id/MyRequirementsRecyclerView"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:id="@+id/Save"
-            android:visibility="gone"
-            android:layout_marginTop="640dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:id="@+id/SaveMyRequirements"
-            android:visibility="gone"
-            android:layout_marginTop="640dp"/>
+                <TextView
+                    android:id="@+id/Places"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Places"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Requirements"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Requirements"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Members"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Members"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Requests"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Requests"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/MyRequirements"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="My Requirements"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+                <TextView
+                    android:id="@+id/Memories"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Memories"
+                    android:clickable="true"
+                    android:onClick="onCategoryClick" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
-    </FrameLayout>
+        <!-- Data Container -->
+        <RelativeLayout
+            android:id="@+id/data_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/Addplace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Places to Trip"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/PlacerecyclerView"
+                android:scrollbars="vertical"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/RequirementsRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/RequestsRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MembersRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MyRequirementsRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Addplace"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MemoriesTextRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/MemoriesTextRecyclerView"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:id="@+id/MemoriesImageRecyclerView"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/MemoriesImageRecyclerView"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"
+                android:id="@+id/MemoriesVideoRecyclerView"/>
+
+
+            <!-- Buttons and FAB -->
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:id="@+id/Save"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="16dp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:id="@+id/SaveMyRequirements"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="16dp"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/AddMemory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="16dp"
+                android:backgroundTint="@color/dark_blue"
+                android:src="@drawable/baseline_add_24"
+                android:visibility="gone"
+                android:tint="@color/white" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/EditMemory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="16dp"
+                android:backgroundTint="@color/dark_blue"
+                android:src="@drawable/baseline_edit_24"
+                android:visibility="gone"
+                android:tint="@color/white" />
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
