--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"> <!-- Adjust the margin as needed -->
 
-    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Activities.HomePage">
@@ -24,69 +24,90 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="71dp"
                     android:layout_marginTop="1dp"
-                    android:padding="5dp"
                     android:orientation="horizontal"
-                    >
+                    android:padding="5dp">
+
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ProfileImage"
                         android:layout_width="60dp"
-                        android:layout_height="60dp"/>
+                        android:layout_height="60dp" />
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="245dp"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
                             android:id="@+id/PostUsername"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
                             android:layout_marginLeft="10dp"
-                            android:textAlignment="textStart"
+                            android:layout_marginTop="8dp"
                             android:text="Username"
+                            android:textAlignment="textStart"
                             android:textSize="16sp"
-                            android:textStyle="bold"
-                            />
+                            android:textStyle="bold" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_marginLeft="5dp"
-                            android:padding="2dp"
-                            >
+                            android:orientation="horizontal"
+                            android:padding="2dp">
+
                             <TextView
                                 android:id="@+id/text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="has been updated a post"
+                                android:text="Updated a post at"
                                 android:textColor="@android:color/darker_gray"
                                 android:textSize="13sp"
-                                android:textStyle="bold"/>
+                                android:textStyle="bold" />
+
                             <TextView
                                 android:id="@+id/post_time"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Time"
                                 android:textColor="@android:color/black"
-                                android:textSize="13sp"/>
+                                android:textSize="13sp" />
+
                             <TextView
                                 android:id="@+id/post_date"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Date"
                                 android:textColor="@android:color/black"
-                                android:textSize="13sp"/>
+                                android:textSize="13sp" />
+
 
                         </LinearLayout>
+
+
                     </LinearLayout>
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/EditPost"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/baseline_edit_22" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/DeletePost"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/baseline_close_24" />
 
 
                 </LinearLayout>
-
 
 
             </LinearLayout>
