--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="light_blue">#92b0c8</color>
     <color name="dark_blue">#5a93c5</color>
     <color name="grey">#e1e7ec</color>
+    <color name="red">#902525</color>
 
 </resources>
